# vectreal-platform

./: .env.development.example  .eslintrc  .gitignore  .prettierignore  .prettierrc  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  components.json  eslint.config.mts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  release-please-config.json  tsconfig.base.json
.claude/skills/: vectreal-brand-ux-design  vectreal-extension-architecture  vectreal-iterative-delivery
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: health-check.sh
.github/workflows/: cd-chromatic-viewer.yaml  cd-img-to-3d-runtime-production.yaml  cd-packages-release.yaml  cd-platform-production.yaml  cd-platform-staging.yaml  cd-trellis-runtime-production.yaml  cd-trellis-runtime-staging.yaml  chromatic-vctrl-viewer.yaml  (+11 more)
apps/img-to-3d-runtime/: .gitignore  README.md  api.py  inference.py  modal_app.py  project.json  pyproject.toml
prd/: 00-product-overview.md  01-plans-and-tiers.md  02-limits-and-quotas.md  03-entitlements.md  04-billing-states.md  05-consent-categories.md  06-analytics-event-taxonomy.md  README.md
scripts/: truchet-thumbnail-gen.mjs
terraform/: .gitignore  .terraform.lock.hcl  README.md  api-services.tf  cdn-lb.tf  cloud-run.tf  cloudflare.tf  main.tf  optimization-functions.tf  outputs.tf  project.json  service-accounts.tf  static-assets.tf  storage.tf  terraform.tfvars copy.example  terraform.tfvars.example  variables.tf
(+956 files in other folders)
